# servier-data-pipeline-mna

./: .gitignore  README.md  cloudbuild.yaml  config.yaml  dockerfile  pyproject.toml  requirements.txt
dags/: pharma_pipeline_dag.py
outputs/: drug_graph.json
sql/: sales_by_product_type.sql  sales_per_day.sql
src/pharma_graph_pipeline/: main.py
src/pharma_graph_pipeline/adhoc/: analysis.py
src/pharma_graph_pipeline/pipeline/: extract.py  load.py  preprocess.py  transform.py
tests/fixtures/: expected_output.json
tests/fixtures/sample_data/: clinical_trials.csv  drugs.csv  pubmed.csv  pubmed.json
tests/integration/: test_full_pipeline.py
tests/unit/: test_preprocess.py  test_transform.py
